WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194123
NSInvalidArgumentException in [WebAVSampleBufferErrorListener observeValueForKeyPath:ofObject:change:context:]
https://bugs.webkit.org/show_bug.cgi?id=194123
Summary
NSInvalidArgumentException in [WebAVSampleBufferErrorListener observeValueFor...
Jer Noble
Reported
2019-01-31 16:33:59 PST
NSInvalidArgumentException in [WebAVSampleBufferErrorListener observeValueForKeyPath:ofObject:change:context:]
Attachments
Patch
(2.50 KB, patch)
2019-01-31 16:36 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-01-31 16:34:45 PST
<
rdar://problem/47721094
>
Jer Noble
Comment 2
2019-01-31 16:36:21 PST
Created
attachment 360802
[details]
Patch
WebKit Commit Bot
Comment 3
2019-01-31 20:45:02 PST
Comment on
attachment 360802
[details]
Patch Clearing flags on attachment: 360802 Committed
r240834
: <
https://trac.webkit.org/changeset/240834
>
WebKit Commit Bot
Comment 4
2019-01-31 20:45:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug