NSInvalidArgumentException in [WebAVSampleBufferErrorListener observeValueForKeyPath:ofObject:change:context:] https://bugs.webkit.org/show_bug.cgi?id=194123 <rdar://problem/47721094>

Reviewed by Eric Carlson.

According to crash logs, AVSampleBufferDisplayLayer.error can go from an NSError* to nil; when such a change is KVO'd,
the NSKeyValueChangeNewKey is a NSNull. Detect this state and bail out early.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(-[WebAVSampleBufferErrorListener observeValueForKeyPath:ofObject:change:context:]):


Canonical link: https://commits.webkit.org/208607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240834 268f45cc-cd09-0410-ab3c-d52691b4dbfc